--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ subtitle: "Improving your testing efforts through smart application of tools"
 name: "Bas Dijkstra"
 description: "Test automation training and consultancy"
 logo: logo_large.png
+plugins:
+  - jekyll-include-cache
