Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,5 @@ plugins:
   - jekyll-include-cache
 remote_theme: "mmistakes/minimal-mistakes@4.19.3"
 minimal_mistakes_skin: "dark"
+
+theme: jekyll-theme-minimal
