Changed header, added menu items, new skin

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,14 @@
 main:
   - title: "Training"
     url: /training/
+  - title: "Contact"
+    url: /contact/
+  - title: "About"
+    url: /about/
+  - title: "Open source workshops"
+    url: /open-source-workshops/
+  - title: "Articles"
+    url: /articles/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
