--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 url: "https://www.ontestautomation.com"
 title: "On Test Automation"
+title_separator: "|"
 subtitle: "Improving your testing efforts through smart application of tools"
 name: "Bas Dijkstra"
 description: "Test automation training and consultancy"
-logo: logo_large.png
+logo: /images/logo_large.png
 plugins:
   - jekyll-include-cache
 remote_theme: "mmistakes/minimal-mistakes@4.19.3"
-minimal_mistakes_skin: "dark"
+minimal_mistakes_skin: "air"
