--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ plugins:
   - jekyll-include-cache
 remote_theme: "mmistakes/minimal-mistakes@4.19.3"
 minimal_mistakes_skin: "air"
+markdown: kramdown
+paginate: 5
+paginate_path: "page:num"
 kramdown:
   syntax_highlighter: rouge
 footer:
