--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "Training"
     url: /training/
+  - title: "Blog"
+    url: /blog/
   - title: "Contact"
     url: /contact/
   - title: "About"
@@ -10,11 +12,3 @@ main:
     url: /open-source-workshops/
   - title: "Articles"
     url: /articles/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
