--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ remote_theme: "mmistakes/minimal-mistakes@4.19.3"
 minimal_mistakes_skin: "air"
 markdown: kramdown
 paginate: 5
-paginate_path: "page:num"
+paginate_path: "/blog/:num"
 kramdown:
   syntax_highlighter: rouge
 author_profile: true
