First steps in new front page, removed title and subtitle from masthead

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: "https://www.ontestautomation.com"
 title: "On Test Automation"
 title_separator: "|"
-subtitle: "Improving your testing efforts through smart application of tools"
+subtitle: "Teaching test automation to companies worldwide"
 name: "Bas Dijkstra"
 description: "Test automation training and consultancy"
 logo: /images/logo_large.png
