--- a/_config.yml
+++ b/_config.yml
@@ -48,3 +48,6 @@ defaults:
       comments: true
       share: true
       related: true
+jekyll_analytics:
+  GoogleAnalytics:
+    id: UA-176276927-1
