--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ plugins:
   - jekyll-include-cache
   - jekyll-paginate
   - jekyll-analytics
+  - jekyll-feed
 remote_theme: "mmistakes/minimal-mistakes@4.19.3"
 minimal_mistakes_skin: "air"
 markdown: kramdown
