--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "Training"
     url: /training/
+  - title: "Consulting"
+    url: /consulting/
   - title: "Blog"
     url: /blog/
   - title: "Contact"
