--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ plugins:
   - jekyll-analytics
   - jekyll-feed
 remote_theme: "mmistakes/minimal-mistakes@4.19.3"
-minimal_mistakes_skin: "dark"
+minimal_mistakes_skin: "air"
 markdown: kramdown
 paginate: 5
 paginate_path: "/blog/:num"
