Add newsletter page and signup form

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # main links
 main:
+  - title: "Newsletter"
+    url: /newsletter/
   - title: "Training"
     url: /training/
   - title: "Consulting"
