--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
     url: /newsletter/
   - title: "Training"
     url: /training/
-  - title: "Mentoring"
-    url: /mentoring/
+#  - title: "Mentoring"
+#    url: /mentoring/
   - title: "Consulting"
     url: /consulting/
   - title: "Blog"
