Add registration page for free public workshops

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,8 @@ main:
     url: /contact/
   - title: "About"
     url: /about/
+  - title: "Free public workshops"
+    url: /free-public-workshops/
   - title: "Open source workshops"
     url: /open-source-workshops/
   - title: "Articles"
