--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author_profile: true
 author:
   name     : "Bas Dijkstra"
   avatar   : "/images/bas.png"
-  bio      : "Helping individuals, teams and organizations improve their test automation efforts"
+  bio      : "Helping individuals, teams and organizations in taking the next step in test automation"
   location : "Amersfoort, the Netherlands"
   links:
     - label: Email
@@ -33,6 +33,9 @@ author:
     - label: GitHub
       icon: "fab fa-fw fa-github"
       url: "https://github.com/basdijkstra"
+    - label: RSS feed (blog)
+      icon: "fab fa-fw fa-rss"
+      url: "https://www.ontestautomation.com/feed.xml"
 footer:
   links:
     - label: Email
