--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,15 +6,17 @@ main:
     url: /mentoring/
   - title: "Consulting"
     url: /consulting/
+  - title: "Contract testing kickstart"
+    url: /contract-testing/
   - title: "Blog"
     url: /blog/
-  - title: "Talks"
-    url: /talks/
   - title: "Contact"
     url: /contact/
   - title: "About"
     url: /about/
   - title: "Open source workshops"
     url: /open-source-workshops/
+  - title: "Talks"
+    url: /talks/
   - title: "Articles"
     url: /articles/
