Fix broken link in navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title: "Consulting"
     url: /consulting/
   - title: "Contract testing kickstart"
-    url: /contract-testing/
+    url: /contract-testing-kickstart/
   - title: "Blog"
     url: /blog/
   - title: "Contact"
