--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
     url: /consulting/
   - title: "Mentoring"
     url: /mentoring/
-  - title: "Book time with me"
+  - title: "Book a meeting"
     url: /meeting/
   - title: "Testimonials"
     url: /testimonials/
