Fix link to contact in navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
     url: /consulting/
   - title: "Mentoring"
     url: /mentoring/
-  - title: "Book a meeting"
-    url: /meeting/
+  - title: "Get in touch"
+    url: /contact/
   - title: "Testimonials"
     url: /testimonials/
   - title: "Blog"
