--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
     url: /consulting/
   - title: "Mentoring"
     url: /mentoring/
-  - title: "Get in touch"
+  - title: "Contact"
     url: /contact/
   - title: "Testimonials"
     url: /testimonials/
